--- a/colorui/main.css
+++ b/colorui/main.css
@@ -3801,6 +3801,15 @@ scroll-view.cu-steps .cu-item {
 	overflow: hidden;
 }
 
+.text-cut-v2{
+	display: -webkit-box;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-all;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2; 
+}
+
 .text-bold {
 	font-weight: bold;
 }
